--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "homepage": "https://github.com/mtcraig/f1#readme",
   "dependencies": {
     "axios": "^1.11.0",
+    "bootstrap": "^5.3.7",
+    "ejs": "^3.1.10",
+    "eslint": "^9.32.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "path": "^0.12.7"
